// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Event/> Render with all props 1`] = `
<Fragment>
  <styled.a
    href="url"
    target="_blank"
  >
    name
  </styled.a>
  <div>
    2019-8-15 19:00:00
  </div>
  <styled.div>
    <div>
      description_short
    </div>
    <styled.div
      dangerouslySetInnerHTML={
        Object {
          "__html": "description_html",
        }
      }
      isDetailsExpanded={false}
    />
    <styled.div>
      <styled.button
        onClick={[Function]}
        title="Показать подробное описание события"
      >
        <i
          className="fas fa-info"
        />
        Показать детали
      </styled.button>
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`Render <Event/> Render without description html 1`] = `
<Fragment>
  <styled.a
    href="url"
    target="_blank"
  >
    name
  </styled.a>
  <div>
    2019-8-15 19:00:00
  </div>
  <styled.div>
    <div>
      description_short
    </div>
  </styled.div>
</Fragment>
`;
